# projectSystem

./: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  JsonStorage.cpp  SensorGenerator.cpp  SensorGenerator.h  ThreadSafeQueue.h  main.cpp
data/: DataProcessor.cpp  DataProcessor.h  SensorGenerator.cpp  SensorGenerator.h  ThreadSafeQueue.h
storage/: JsonStorage.h
